<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/b_fountain"
                style="@style/light"
                android:layout_width="130dip"
                android:layout_height="120dip"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:alpha="0.8"
                android:background="@layout/button_home"
                android:drawableTop="@drawable/ic_fountain_main"
                android:paddingTop="20dp"
                android:text="@string/map_fountain"
                android:textAllCaps="true"
                android:textColor="@color/whitegray" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/b_wc"
                style="@style/light"
                android:layout_width="130dip"
                android:layout_height="120dip"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:alpha="0.8"
                android:background="@layout/button_home"
                android:drawableTop="@drawable/ic_wc"
                android:paddingTop="20dp"
                android:text="@string/map_wc"
                android:textAllCaps="true"
                android:textColor="@color/whitegray" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/b_waterlevel"
                style="@style/light"
                android:layout_width="130dip"
                android:layout_height="120dip"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:background="@layout/button_home"
                android:drawableTop="@drawable/ic_level"
                android:paddingTop="20dp"
                android:text="@string/waterlevel_waterlevel"
                android:textAllCaps="true"
                android:textColor="@color/whitegray" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/b_precipitation"
                style="@style/light"
                android:layout_width="130dip"
                android:layout_height="120dip"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:background="@layout/button_home"
                android:drawableTop="@drawable/ic_precipitation"
                android:paddingTop="20dp"
                android:text="@string/precipitation_precipitation"
                android:textAllCaps="true"
                android:textColor="@color/whitegray" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_circle_1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_circle_0" />

    </LinearLayout>

</LinearLayout>