<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    android:background="@drawable/bg_water"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:src="@drawable/ic_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/b_mark_fountain"
                    style="@style/Button_list"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@layout/button_list"
                    android:drawableLeft="@drawable/ic_position_drinkable_1"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/ic_arrow"
                    android:padding="10dp"
                    android:text="@string/map_fountain"
                    android:textAllCaps="true"
                    android:textColor="@color/whitegray" />

                <Button
                    android:id="@+id/b_mark_wc"
                    style="@style/Button_list"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:background="@layout/button_list"
                    android:drawableLeft="@drawable/ic_position_accessible_1"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/ic_arrow"
                    android:padding="10dp"
                    android:text="@string/map_wc"
                    android:textAllCaps="true"
                    android:textColor="@color/whitegray" />

                <Button
                    android:id="@+id/b_mark_hs"
                    style="@style/Button_list"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:background="@layout/button_list"
                    android:drawableLeft="@drawable/ic_position_healingspring_1"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/ic_arrow"
                    android:padding="10dp"
                    android:text="@string/map_hs"
                    android:textAllCaps="true"
                    android:textColor="@color/whitegray" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>