<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_water"
    android:layout_marginBottom="50dp"
    android:orientation="vertical"
    tools:context="at.fhhgb.mc.wasserapp.labbus.LabbusActivity" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/blue" >

        <Button
            android:id="@+id/b_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="@layout/button_actionbar"
            android:drawableLeft="@drawable/ic_back"
            android:paddingLeft="15dp"
            android:paddingRight="30dp" />

        <TextView
            android:id="@+id/tv_labbus_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/labbus_labbus"
            android:textAllCaps="true"
            android:textColor="@color/whitegray" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/tv_labbus_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:background="@color/blue"
            android:padding="10dp"
            android:text="Der Laborbus bietet interessierten Hausbrunnenbesitzern die Möglichkeit, ihr Trinkwasser mit modernsten Messgeräten auf die wichtigsten Inhaltsstoffe untersuchen und eine bautechnische Begutachtung durchführen zu lassen. Dieses Fahrzeug ist mit einem Chemiker und einem Wassermeister in Oberösterreich unterwegs."
            android:textColor="@color/whitegray"
            android:textSize="16sp" />

        <Button
            android:id="@+id/b_labbus_moreinformation"
            style="@style/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:alpha="0.8"
            android:background="@layout/button_home"
            android:drawablePadding="10dp"
            android:drawableRight="@android:drawable/ic_dialog_info"
            android:padding="5dp"
            android:text="@string/labbus_moreInfos"
            android:textAllCaps="true"
            android:textColor="@color/whitegray" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:alpha="0.8"
        android:background="@color/blue" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:text="@string/labbus_nextStops"
            android:textColor="@color/whitegray" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/lv_labbus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <ProgressBar
            android:id="@+id/progressBarLabbus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

    </FrameLayout>

</LinearLayout>