<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/b_healing"
                    style="@style/light"
                    android:layout_width="130dip"
                    android:layout_height="120dip"
                    android:layout_gravity="right"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:alpha="0.8"
                    android:background="@layout/button_home"
                    android:drawableTop="@drawable/ic_precipitation"
                    android:paddingTop="10dp"
                    android:text="@string/precipitation_precipitation"
                    android:textAllCaps="true"
                    android:textColor="@color/whitegray" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/b_lakes"
                    style="@style/light"
                    android:layout_width="130dip"
                    android:layout_height="120dip"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:alpha="0.8"
                    android:background="@layout/button_home"
                    android:drawableTop="@drawable/ic_lakes"
                    android:paddingTop="30dp"
                    android:text="@string/lakes_lakes"
                    android:textAllCaps="true"
                    android:textColor="@color/whitegray" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/b_waterlevel"
                    style="@style/light"
                    android:layout_width="130dip"
                    android:layout_height="120dip"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:alpha="0.8"
                    android:background="@android:color/transparent"
                    android:paddingTop="20dp"
                    android:textAllCaps="true"
                    android:textColor="@color/whitegray" />

                <Button
                    android:id="@+id/b_labbus"
                    style="@style/light"
                    android:layout_width="130dip"
                    android:layout_height="120dip"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:alpha="0.8"
                    android:background="@layout/button_home"
                    android:drawableTop="@drawable/ic_laborbus"
                    android:paddingTop="20dp"
                    android:text="@string/labbus_labbus"
                    android:textAllCaps="true"
                    android:textColor="@color/whitegray" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/b_precipitation"
                    style="@style/light"
                    android:layout_width="130dip"
                    android:layout_height="120dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:alpha="0.8"
                    android:background="@android:color/transparent"
                    android:paddingTop="20dp"
                    android:textAllCaps="true"
                    android:textColor="@color/whitegray" />

                <Button
                    android:id="@+id/b_emergencymanagement"
                    style="@style/light"
                    android:layout_width="130dip"
                    android:layout_height="120dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:alpha="0.8"
                    android:background="@layout/button_home"
                    android:drawableTop="@drawable/ic_about"
                    android:paddingTop="20dp"
                    android:text="@string/emergencyManagement_emergencyManagement"
                    android:textAllCaps="true"
                    android:textColor="@color/whitegray" />

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/img_grade1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_circle_0" />

            <ImageView
                android:id="@+id/img_detailsview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_circle_1" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>